--- a/index1.html
+++ b/index1.html
@@ -21,321 +21,10 @@
     .kolom { display: flex; flex-direction: column; align-items: center; }
     h1 { font-size: 20px; margin: 10px 0; }
     canvas { background: var(--panel); border: 4px solid var(--fg); border-radius: 12px; }
-    #rad { width: 500px; height: 400px; }   /* extra ruimte rechts voor de pijl */
+    #rad { width: 500px; height: 400px; }
     button {
       margin-top: 12px; padding: 10px 20px; font-size: 16px;
       border: 0; border-radius: 12px; background: var(--fg); color: #fff; cursor: pointer;
     }
     button[disabled] { opacity: .6; cursor: not-allowed; }
     #resultaat { margin-top: 10px; font-size: 18px; font-weight: 700; min-height: 1.5em; }
-    #live { position: absolute; left: -9999px; }
-  </style>
-</head>
-<body>
-  <div class="kolom">
-    <h1>Spinner</h1>
-    <canvas id="rad" width="500" height="400" aria-label="kleurenspin"></canvas>
-    <button id="draaiBtn" aria-describedby="resultaat">Draai</button>
-    <div id="resultaat"></div>
-    <div id="live" role="status" aria-live="polite"></div>
-  </div>
-
-  <div class="kolom">
-    <h1>Kleurenmonster</h1>
-    <canvas id="monster" width="400" height="600" aria-label="kleurenmonster"></canvas>
-  </div>
-
-  <script>
-  (() => {
-    // kleuren en labels, herhaling toegestaan
-    const opties = ["zalm roze","lila","beige","wit","zilver","goud","turquoise"];
-    const kleurMap = {
-      "zalm roze":"#FFA07A",
-      "lila":"#C8A2C8",
-      "beige":"#F5F5DC",
-      "wit":"#FFFFFF",
-      "zilver":"#C0C0C0",
-      "goud":"#D4AF37",
-      "turquoise":"#40E0D0"
-    };
-
-    // segmenttekst, zwarte tekst overal
-    const donkereSegmenten = new Set([]);
-
-    // lijnen wit en pupillen, uit bij deze set
-    const lijnenWitKleuren = new Set([]);
-    const pupilKleuren = new Set([]);
-
-    // metallic glans
-    const metallicKleuren = new Set(["goud","zilver"]);
-
-    // spinner
-    const rad = document.getElementById("rad");
-    const rctx = rad.getContext("2d");
-    const CX = 220, CY = 200, R = 190;   // rad links in het canvas
-    let hoek = 0, bezig = false, gekozen = opties[0];
-
-    function tekenSchijven() {
-      const stap = 2 * Math.PI / opties.length;
-      for (let i = 0; i < opties.length; i++) {
-        const naam = opties[i];
-        rctx.beginPath();
-        rctx.moveTo(CX, CY);
-        rctx.arc(CX, CY, R, i * stap, (i + 1) * stap);
-        rctx.closePath();
-        rctx.fillStyle = kleurMap[naam] || "#000";
-        rctx.fill();
-        rctx.strokeStyle = "#222";
-        rctx.lineWidth = 2;
-        rctx.stroke();
-
-        const tekstkleur = donkereSegmenten.has(naam) ? "#fff" : "#000";
-        rctx.save();
-        rctx.translate(CX, CY);
-        rctx.rotate(i * stap + stap / 2);
-        rctx.textAlign = "right";
-        rctx.fillStyle = tekstkleur;
-        rctx.font = "16px system-ui, Arial";
-        rctx.fillText(naam, R - 12, 6);
-        rctx.restore();
-      }
-      rctx.lineWidth = 6;
-      rctx.strokeStyle = "#333";
-      rctx.beginPath();
-      rctx.arc(CX, CY, R + 3, 0, Math.PI * 2);
-      rctx.stroke();
-    }
-
-    // pijl buiten het rad, geheel binnen het canvas
-    function tekenPijl() {
-      const offset = 22;
-      const tipX = CX + R + offset;  // punt naast de cirkel
-      const tipY = CY;
-      const baseX = tipX + 34;       // basis verder naar rechts, maar nog binnen 500
-      const halfH = 22;
-
-      rctx.beginPath();
-      rctx.moveTo(tipX, tipY);
-      rctx.lineTo(baseX, tipY - halfH);
-      rctx.lineTo(baseX, tipY + halfH);
-      rctx.closePath();
-      rctx.fillStyle = "#222";
-      rctx.fill();
-
-      rctx.beginPath();
-      rctx.arc(CX, CY, 6, 0, Math.PI * 2);
-      rctx.fill();
-    }
-
-    function renderRad() {
-      rctx.clearRect(0, 0, rad.width, rad.height);
-      rctx.save();
-      rctx.translate(CX, CY);
-      rctx.rotate(hoek * Math.PI / 180);
-      rctx.translate(-CX, -CY);
-      tekenSchijven();
-      rctx.restore();
-      tekenPijl();
-    }
-
-    function indexOnderPijl() {
-      const n = opties.length, stap = 360 / n;
-      let a = (-hoek) % 360; if (a < 0) a += 360;
-      return Math.floor(a / stap) % n;
-    }
-
-    function draai() {
-      if (bezig) return;
-      bezig = true;
-      document.getElementById("draaiBtn").disabled = true;
-
-      let snelheid = 20 + Math.random() * 15;
-      hoek += 360 * 4;
-
-      function anim() {
-        snelheid *= 0.985;
-        hoek += snelheid;
-        renderRad();
-        if (snelheid > 0.25) requestAnimationFrame(anim);
-        else {
-          hoek = hoek % 360;
-          renderRad();
-          const idx = indexOnderPijl();
-          gekozen = opties[idx];
-          const lijnenWit = lijnenWitKleuren.has(gekozen);
-          const toonPupillen = pupilKleuren.has(gekozen);
-          const metallicType = metallicKleuren.has(gekozen) ? gekozen : null;
-
-          toonResultaat(gekozen);
-          kleurMonster(kleurMap[gekozen], lijnenWit, toonPupillen, metallicType);
-
-          bezig = false;
-          document.getElementById("draaiBtn").disabled = false;
-        }
-      }
-      requestAnimationFrame(anim);
-    }
-
-    function toonResultaat(tekst) {
-      document.getElementById("resultaat").textContent = `Gekozen kleur: ${tekst}`;
-      document.getElementById("live").textContent = `Kleur ${tekst}`;
-    }
-
-    // monster
-    const mCanvas = document.getElementById("monster");
-    const m = mCanvas.getContext("2d");
-    const imgMask  = new Image();  imgMask.src  = "monster-mask.png";
-    const imgLine  = new Image();  imgLine.src  = "monster-line.png";
-    const imgPupil = new Image();  imgPupil.src = "monster-pupillen.png";
-
-    let assetsGereed = false;
-    Promise.all([
-      new Promise(res => imgMask.onload  = res),
-      new Promise(res => imgLine.onload  = res),
-      new Promise(res => imgPupil.onload = res)
-    ]).then(() => {
-      assetsGereed = true;
-      tekenMonsterKader();
-      kleurMonster(kleurMap[gekozen], false, false, null);
-    });
-
-    function tekenMonsterKader() {
-      m.clearRect(0, 0, mCanvas.width, mCanvas.height);
-      m.save();
-      m.lineWidth = 6;
-      m.strokeStyle = "#222";
-      m.fillStyle = "#fff";
-      m.beginPath();
-      rondeRechthoek(m, 12, 12, mCanvas.width - 24, mCanvas.height - 24, 18);
-      m.fill();
-      m.stroke();
-      m.restore();
-    }
-
-    // lijnenWit, toonPupillen, metallicType: "goud" of "zilver" of null
-    function kleurMonster(vulkleur, lijnenWit, toonPupillen, metallicType) {
-      if (!assetsGereed) return;
-
-      tekenMonsterKader();
-
-      const pad = 24;
-      const doelW = mCanvas.width - pad * 2;
-      const doelH = mCanvas.height - pad * 2;
-      const ratio = Math.min(doelW / imgMask.width, doelH / imgMask.height);
-      const w = Math.max(1, Math.round(imgMask.width * ratio));
-      const h = Math.max(1, Math.round(imgMask.height * ratio));
-      const x = Math.round((mCanvas.width - w) / 2);
-      const y = Math.round((mCanvas.height - h) / 2);
-
-      // vulling binnen het masker
-      m.save();
-      m.fillStyle = vulkleur;
-      m.fillRect(x, y, w, h);
-      m.globalCompositeOperation = "destination-in";
-      m.imageSmoothingEnabled = true;
-      m.drawImage(imgMask, x, y, w, h);
-      m.globalCompositeOperation = "source-over";
-
-      // metallic glans onder de lijnen
-      if (metallicType) voegMetaalGlansToe(metallicType, x, y, w, h);
-
-      // lijnen
-      if (!lijnenWit) {
-        m.drawImage(imgLine, x, y, w, h);
-      } else {
-        const off = document.createElement("canvas");
-        off.width = w; off.height = h;
-        const o = off.getContext("2d");
-        o.imageSmoothingEnabled = true;
-        o.fillStyle = "#ffffff";
-        o.fillRect(0, 0, off.width, off.height);
-        o.globalCompositeOperation = "destination-in";
-        o.drawImage(imgLine, 0, 0, off.width, off.height);
-        o.globalCompositeOperation = "source-over";
-        m.drawImage(off, x, y);
-      }
-
-      if (toonPupillen) m.drawImage(imgPupil, x, y, w, h);
-      m.restore();
-    }
-
-    function voegMetaalGlansToe(type, x, y, w, h) {
-      // diepte in overlay
-      const overlay = document.createElement("canvas");
-      overlay.width = w; overlay.height = h;
-      const o = overlay.getContext("2d");
-      const lg = o.createLinearGradient(0, 0, 0, h);
-      if (type === "goud") {
-        lg.addColorStop(0.00, "rgba(255,245,200,0.55)");
-        lg.addColorStop(0.40, "rgba(255,255,255,0.15)");
-        lg.addColorStop(0.60, "rgba(0,0,0,0.28)");
-        lg.addColorStop(1.00, "rgba(120,90,0,0.22)");
-      } else {
-        lg.addColorStop(0.00, "rgba(255,255,255,0.55)");
-        lg.addColorStop(0.50, "rgba(0,0,0,0.28)");
-        lg.addColorStop(1.00, "rgba(230,230,230,0.30)");
-      }
-      o.fillStyle = lg;
-      o.fillRect(0, 0, w, h);
-      o.globalCompositeOperation = "destination-in";
-      o.drawImage(imgMask, 0, 0, w, h);
-      o.globalCompositeOperation = "source-over";
-      m.save();
-      m.globalCompositeOperation = "overlay";
-      m.drawImage(overlay, x, y);
-      m.globalCompositeOperation = "source-over";
-      m.restore();
-
-      // speculaire highlight in screen
-      const spec = document.createElement("canvas");
-      spec.width = w; spec.height = h;
-      const s = spec.getContext("2d");
-      const rg = s.createRadialGradient(w * 0.30, h * 0.25, 0, w * 0.30, h * 0.25, Math.max(w, h) * 0.55);
-      rg.addColorStop(0.00, "rgba(255,255,255,0.95)");
-      rg.addColorStop(0.30, "rgba(255,255,255,0.50)");
-      rg.addColorStop(1.00, "rgba(255,255,255,0.00)");
-      s.fillStyle = rg;
-      s.fillRect(0, 0, w, h);
-      s.save();
-      s.globalAlpha = 0.65;
-      s.translate(w * 0.12, h * 0.18);
-      s.rotate(-Math.PI / 10);
-      const strip = s.createLinearGradient(0, 0, w * 0.9, 0);
-      strip.addColorStop(0.00, "rgba(255,255,255,0)");
-      strip.addColorStop(0.55, "rgba(255,255,255,1)");
-      strip.addColorStop(1.00, "rgba(255,255,255,0)");
-      s.fillStyle = strip;
-      s.fillRect(0, 0, w * 0.9, h * 0.10);
-      s.restore();
-      s.globalCompositeOperation = "destination-in";
-      s.drawImage(imgMask, 0, 0, w, h);
-      s.globalCompositeOperation = "source-over";
-      m.save();
-      m.globalCompositeOperation = "screen";
-      m.drawImage(spec, x, y);
-      m.globalCompositeOperation = "source-over";
-      m.restore();
-    }
-
-    function rondeRechthoek(ctx, x, y, w, h, r) {
-      ctx.moveTo(x + r, y);
-      ctx.lineTo(x + w - r, y);
-      ctx.quadraticCurveTo(x + w, y, x + w, y + r);
-      ctx.lineTo(x + w, y + h - r);
-      ctx.quadraticCurveTo(x + w, y + h, x + w - r, y + h);
-      ctx.lineTo(x + r, y + h);
-      ctx.quadraticCurveTo(x, y + h, x, y + h - r);
-      ctx.lineTo(x, y + r);
-      ctx.quadraticCurveTo(x, y, x + r, y);
-    }
-
-    // init, na DOM is alles gereed
-    document.getElementById("draaiBtn").addEventListener("click", draai);
-    document.addEventListener("keydown", e => {
-      if ((e.key === "Enter" || e.code === "Space") && !bezig) draai();
-    });
-    renderRad();
-  })();
-  </script>
-</body>
-</html>
